Add Docker configuration and update modem entry point

--- a/modem/Dockerfile
+++ b/modem/Dockerfile
@@ -1,6 +1,5 @@
 FROM python:3.14.0-slim
 
-
 WORKDIR /app
 
 COPY requirements.txt .
@@ -11,4 +10,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-CMD ["python", "wenet_uart.py"]
+CMD ["python", "-u", "wenet_modem.py"]
